--- a/src/Home.scss
+++ b/src/Home.scss
@@ -6,9 +6,11 @@ $lines: #002125;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80vw;
 
   p {
     text-align: center;
+    font-size: 1rem;
   }
 }
 
@@ -16,9 +18,10 @@ $lines: #002125;
   text-decoration: none;
   border: 1px solid $lines;
   color: $lines;
-  padding: 1.5vh 3vh;
+  padding: 1vh 1.5vh;
   border-radius: 1vh;
   background-color: $secondary;
+  font-size: 1rem;
 
   &:hover {
     color: $button-hover;
